# job-analytics-lakehouse-e2e

./: .gitignore  Dockerfile.crawler  Dockerfile.spark  Dockerfile.standard  README.md  core-site.xml  docker-compose.yml  pyproject.toml  spark-defaults.conf  test.sql  test_salary.py  test_salary_output.txt  test_sb.py
bot/: main.py  requirements.txt  trino_client.py
config/: hehe.md
config/dockerfile/: Dockerfile.bot  Dockerfile.crawler  Dockerfile.gold  Dockerfile.spark  build_images.sh
config/schemas/: careerviet_schema.json  itviec_schema.json  topcv_schema.json  topdev_schema.json  vietnamworks_schema.json
config/trino/catalog/: iceberg.properties
dags/: crawl_jobs_dag.py
dags/scripts/extract/: itviec.py  topcv.py  topdev.py  vietnamworks.py
data/: careerviet_jobs.json  itviec_jobs.json  topcv.json  topcv_jobs.json  topdev_jobs.json  vietnamworks_jobs.json
minIO/scripts/: full_deploy.sh  init_bucket.sh  init_namespace.py
output/: .part-00000-97131a11-4771-43c3-89f1-2684c0762b16-c000.json.crc  part-00000-97131a11-4771-43c3-89f1-2684c0762b16-c000.json
src/: query_gold.py
src/extract/: base_crawler.py  base_ingestor.py  careerviet.py  ingest_landing_to_bronze.py  itviec.py  topcv.py  topdev.py  vietnamworks.py
src/load/: publish_gold_to_postgres.py
src/transform/: job_standardizer.py  standardizers.py  transform_bronze_to_silver.py  transform_silver_to_gold.py
src/utils/: spark_util.py
trino/etc/catalog/: iceberg.properties
