[project]
name = "job-analyst-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.29",
    "bs4>=0.0.2",
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "dotenv-python>=0.0.1",
    "lxml>=6.1.1",
    "minio>=7.2.20",
    "pyspark==3.4.2",
    "requests>=2.34.2",
    "seleniumbase>=4.49.12",
]
